# edas_tatianamilser

./: .bumpversion.cfg  .coveragerc  .pypirc  README (EN).md  README (ES).md  README.md  README_ES.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/edas_tatmil/: commandline.py
src/edastatmil_milser/: edas_tatmil.py  version.py
tests/: test_cli.py  test_import.py
