[project]
name = "edastatmil_milser"
version = "0.16"
authors = [
  { name="TatianaCC y milser", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/milser/edas_tatianamilser"
Issues = "https://github.com/milser/edas_tatianamilser/issues"