[metadata]
name = edas_tatmil
version = 0.0.5
description = A template repository for a modern Python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/milser/edas_tatianamilser
author = Author Name
author_email = author.name@email.com
license = Apache
license_file = LICENSE
keywords = python template
project_urls =
    Documentation = https://github.com/milser/edas_tatianamilser
    Source = https://github.com/milser/edas_tatianamilser
    Tracker = https://github.com/milser/edas_tatianamilser
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal = 1

[options]
setup_requires =
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    click>=6.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    edas_tatmil = edas_tatmil.commandline:edas_tatmil

[build_sphinx]
project = edas_tatmil
source-dir = docs
build-dir = docs/_build
all-files = 1
warning-is-error = 1
