[metadata]
name = edastatmil_milser
version = 0.9
author = TatianaCC y milser
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/milser/edas_tatianamilser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
where = src
